# GHEtool

./: .gitignore  .pylintrc  .readthedocs.yaml  Boorvelddimensionering_38.py  CHANGELOG.md  CITATION.cff  Datadump.pkl  LICENSE  LICENSE.txt  MANIFEST.IN  Paper.bib  Paper.md  README.md  backup.GHEtool  codecov.yml  mainwindow.py  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  test.gvalues  test.json
.github/: CODEOWNERS
.github/workflows/: .test.yml  CD.yml  docs.yml  draft-pdf.yml  release.yml  test.yml  test_pr.yml
Articles/: README.md
Articles/IEA_HPT_magazine_2023/: IEA_HPT_magazine.py  auditorium.csv  office_results.pkl  residential.csv
GHEtool/: .coveragerc  Borefield.py  Example.py  GHEtool.py  GUI.py  Gui_window.py  Mappe1.csv  __init__.py  backup.pkl  borefield.py  icons_rc.py  logger.py  main_GUI.py  main_class.py  main_class.py.orig  temp.py  tes.pkl  test.csv  tst.pkl
GHEtool/Articles/: README.md
GHEtool/BAC/: OneField.py  coordinatenlijst optie 1.csv  coordinatenlijst optie 2.csv  hotel.csv  kantoor.csv  terminal.csv
GHEtool/Data/: 10x1.pickle  10x1.txt  10x10.pickle  10x10.txt  10x2.pickle  10x2.txt  10x3.pickle  10x3.txt  10x4.pickle  10x4.txt  10x5.pickle  10x5.txt  10x6.pickle  10x6.txt  10x7.pickle  10x7.txt  10x8.pickle  10x8.txt  10x9.pickle  10x9.txt  11x1.pickle  11x1.txt  11x10.pickle  11x10.txt  11x11.pickle  11x11.txt  11x2.pickle  11x2.txt  11x3.pickle  11x3.txt  11x4.pickle  11x4.txt  11x5.pickle  11x5.txt  11x6.pickle  11x6.txt  11x7.pickle  11x7.txt  11x8.pickle  11x8.txt  (+356 more)
GHEtool/Examples/: Custom_Borefield_Configuration.py  Effect_of_Borehole_Configuration.py  Fluid viscosity.py  HF_14obs.kmz  Hourly_Profile.csv  Hydratech.py  Import_Data.py  Main_Functionalities.py  Muovitech_new.py  Optimise_Load_Profile.py  Size_Borefield_By_Length_And_Width.py  Vario.py  active_passive_cooling.py  active_passive_example.csv  combined_active_and_passive_cooling.py  custom_borefield_configuration.py  effect_of_borehole_configuration.py  energy_pile.py  explicit_model.py  explicit_model_double.py  find_optimal_borefield.py  hourly_profile_2.csv  hourly_profile_comma.csv  hourly_profile_comma_as_sep.csv  hourly_profile_same.csv  hourly_profile_wrong.csv  import_data.py  kilfrost.py  load_optimise.csv  main_functionalities.py  multiple_ground_layers.py  muoviellipse.py  optimal_borehole_configuration.py  optimal_borehole_configuration_multipleconfig.py  optimise_load_profile.py  optimise_load_profile_extra.py  pipe.py  readkml.py  regex.py  separatus.py  (+16 more)
GHEtool/GUI/: Gui_window.py  IconClass.py  Translation_class.py  icons_rc.py  main_GUI.py
GHEtool/GUI_exe/: GHEtool.py  Gui_window.py  IconClass.py  Translation_class.py  main_GUI.py
GHEtool/Methods/: __init__.py  optimise_borefield_configuration.py  optimise_load_profile.py  pressure_drop_calculation.py
GHEtool/Validation/: Cases.py  Datadump.pkl  Sizing_Method_Comparison.py  Sizing_With_Rb_Calculation.py  (+17 more)
JOSS/: Paper.bib  Paper.md  paper.bib
docs/: conf.py  index.md  index.rst
(+1044 files in other folders)
