[metadata]
name = GHEtool
version = 2.4.0.dev15
author = Wouter Peere
author_email = wouter@ghetool.eu
description = Python package for borefield sizing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ghetool.eu
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
	matplotlib>=3.9.2
	numpy>=1.26.4
	pandas>=1.4.3
	scipy>=1.8.1
	pygfunction==2.3.0
	secondarycoolantprops >= 1.1
	optuna >= 3.6.1

[options.packages.find]
exclude =
    GHEtool.Examples
    GHEtool.test

[options.package_data]
* = *.csv, *.txt, *.npy, *

[flake8]
max-line-length =160
exclude = __init__.py

[pylint]
max-line-length=160
disable=R0902

